--- a/src/index.html
+++ b/src/index.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>OXO game boilerplate</title>
+    <script defer src="js/libs/oxo.js"></script>
+    <script defer src="js/game.js"></script>
     <link rel="stylesheet" href="scss/styles.scss" />
   </head>
   <body></body>
