--- a/src/index.html
+++ b/src/index.html
@@ -6,8 +6,10 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>OXO game boilerplate</title>
     <script defer src="js/libs/oxo.js"></script>
-    <script defer src="js/game.js"></script>
+    <script defer src="js/script.js"></script>
     <link rel="stylesheet" href="scss/styles.scss" />
   </head>
-  <body></body>
+  <body>
+    <!-- Nothing to add here, screens are in src/screens -->
+  </body>
 </html>
