--- a/src/screens/game.html
+++ b/src/screens/game.html
@@ -1,3 +1,3 @@
-GAME
+<div id="snake" class="game__square game__square--head"></div>
 
-<div data-oxo-score></div>
+<div class="game__score" data-oxo-score></div>
