--- a/src/screens/end.html
+++ b/src/screens/end.html
@@ -1,1 +1,4 @@
-END
+<h1 class="end__title">Game Over</h1>
+<img src="../img/cloud_shoot_or_hit.png" alt="" class="end__img">
+<p class="end__score">Your score: XXX</p>
+<p class="end__instructions">Press "SPACE" to restart</p>
