--- a/src/screens/home.html
+++ b/src/screens/home.html
@@ -1,1 +1,4 @@
-HOME
+<img src="../img/logo_temp.png" alt="" class="home__logo">
+<img src="../img/cloud_happy.png" alt="" class="home__img">
+<img src="../img/factory.png" alt="" class="home__img--factory">
+<p class="home__instructions">Press "SPACE" to start</p>
