--- a/src/screens/game.html
+++ b/src/screens/game.html
@@ -1,2 +1,3 @@
-<div id="smog" class="game__zone"></div>
+<div id="cloud" class="smog"></div>
+<div id="ground" class="floor"></div>
 <div class="game__score" data-oxo-score></div>
