--- a/src/screens/game.html
+++ b/src/screens/game.html
@@ -1,3 +1,3 @@
-<div id="cloud" class="smog"></div>
-<div id="ground" class="floor"></div>
 <div class="game__score" data-oxo-score></div>
+<img src="../img/cloud_happy.png" id="cloud" class="smog">
+<div id="ground" class="floor"></div>
