--- a/src/screens/end.html
+++ b/src/screens/end.html
@@ -1,4 +1,6 @@
 <h1 class="end__title">Game Over</h1>
 <img src="../img/cloud_shoot_or_hit.png" alt="" class="end__img">
-<p class="end__score">Your score: XXX</p>
-<p class="end__instructions">Press "SPACE" to restart</p>
+<div class="end__score">Your score:
+	<div class="score__data" data-oxo-score></div>
+</div>
+<div class="end__instructions">Press "SPACE" to restart</div>
