--- a/src/screens/game.html
+++ b/src/screens/game.html
@@ -1,3 +1,3 @@
 <div class="game__score" data-oxo-score></div>
-<img src="../img/cloud_happy.png" id="cloud" class="smog">
-<div id="ground" class="floor"></div>
+<img src="../img/cloud_happy.png" id="cloud" class="game__smog">
+<div id="ground" class="game__foor"></div>
