--- a/src/screens/end.html
+++ b/src/screens/end.html
@@ -1,6 +1,6 @@
 <h1 class="end__title">Game Over</h1>
 <img src="../img/cloud_shoot_or_hit.png" alt="" class="end__img">
-<div class="end__score">Your score:
+<div class="end__score">Your score
 	<div class="score__data" data-oxo-score></div>
 </div>
 <div class="end__instructions">Press "SPACE" to restart</div>
