--- a/src/screens/end.html
+++ b/src/screens/end.html
@@ -3,4 +3,4 @@
 <div class="end__score">Your score
 	<div class="score__data" data-oxo-score></div>
 </div>
-<div class="end__instructions">Press "SPACE" to restart</div>
+<div class="end__instructions">Press "ENTER" to restart</div>
