--- a/src/screens/home.html
+++ b/src/screens/home.html
@@ -1,3 +1,4 @@
+<audio src="../audio/loginMusic.mp3" autoplay loop></audio>
 <img src="../img/logo_temp.png" alt="" class="home__logo">
 <img src="../img/cloud_happy.png" alt="" class="home__img">
 <p class="home__instructions">Press "SPACE" to start</p>
