--- a/src/screens/game.html
+++ b/src/screens/game.html
@@ -1,5 +1,8 @@
+<audio autoplay loop id="gameSound" src="../audio/game.mp3"></audio>
+<audio id="water" src="../audio/water_sound.mp3"></audio>
+<audio id="bolt" src="../audio/electric_sound.mp3"></audio>
 <div class="game__score" data-oxo-score></div>
-<img src="../img/cloud_happy.png" id="cloud" class="game__smog">
+<div id="cloud" class="game__smog"></div>
 <div id="ground" class="game__foor"></div>
 <div id="sky" class="sky"></div>
 <div id="factory__zone" class="factory__zone"></div>
