--- a/src/screens/home.html
+++ b/src/screens/home.html
@@ -1,5 +1,11 @@
-<audio src="../audio/loginMusic.mp3" autoplay loop></audio>
+<audio autoplay loop src="../audio/home.mp3"></audio>
 <img src="../img/logo_temp.png" alt="" class="home__logo">
 <img src="../img/cloud_happy.png" alt="" class="home__img">
-<p class="home__instructions">Press "SPACE" to start</p>
+<div class="home__instructions">Press "SPACE" to start</div>
 <div class="home__help">Instructions</div>
+<div class="help__text">
+	<p>Recommended resolution: 1280*800</p>
+	<p>A -> Shoot water</p>
+	<p>D -> Shoot thunder</p>
+	<p>SPACE -> SPACE</p>
+</div>
