--- a/src/screens/game.html
+++ b/src/screens/game.html
@@ -3,6 +3,6 @@
 <audio id="bolt" src="../audio/electric_sound.mp3"></audio>
 <div class="game__score" data-oxo-score></div>
 <div id="cloud" class="game__smog"></div>
-<div id="ground" class="game__foor"></div>
+<div id="ground" class="game__floor"></div>
 <div id="sky" class="sky"></div>
-<div id="factory__zone" class="factory__zone"></div>
+<div id="factory" class="factory"></div>
