--- a/src/screens/home.html
+++ b/src/screens/home.html
@@ -7,5 +7,5 @@
 	<p>Recommended resolution: 1280*800</p>
 	<p>A -> Shoot water</p>
 	<p>D -> Shoot thunder</p>
-	<p>SPACE -> SPACE</p>
+	<p>SPACE -> Jump</p>
 </div>
