--- a/src/screens/game.html
+++ b/src/screens/game.html
@@ -1,4 +1,4 @@
-<audio autoplay loop id="gameSound" src="../audio/game.mp3"></audio>
+<audio id="gameSound" src="../audio/game.mp3" autoplay loop></audio>
 <audio id="water" src="../audio/water_sound.mp3"></audio>
 <audio id="bolt" src="../audio/electric_sound.mp3"></audio>
 <div class="game__score" data-oxo-score></div>
