--- a/src/screens/home.html
+++ b/src/screens/home.html
@@ -1,4 +1,4 @@
-<audio autoplay loop src="../audio/home.mp3"></audio>
+<audio src="../audio/home.mp3" autoplay loop ></audio>
 <img src="../img/logo_temp.png" alt="" class="home__logo">
 <img src="../img/cloud_happy.png" alt="" class="home__img">
 <div class="home__instructions">Press "SPACE" to start</div>
